--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-/*
-Project Name: Blank Template
-Client: Your Client
-Author: Your Name
-Developer @GA in NYC
+    /*
+Project Name: Relaxr Responsive
+Client: Relaxr
+Author: Michael Shippard
+Developer @GA in Melbourne
 */
 
 
@@ -10,51 +10,63 @@ Developer @GA in NYC
 /* SETUP
 /*******************************************/
 
+
 /* Box Model Hack */
+
 * {
-  -moz-box-sizing: border-box; /* Firexfox */
-  -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
-  box-sizing: border-box; /* IE */
+    -moz-box-sizing: border-box;
+    /* Firexfox */
+    -webkit-box-sizing: border-box;
+    /* Safari/Chrome/iOS/Android */
+    box-sizing: border-box;
+    /* IE */
 }
 
+
+
 /* Clear fix hack */
+
 .clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
 }
 
 .clear {
-  clear: both;
+    clear: both;
 }
 
 .alignright {
-  float: right;
-  padding: 0 0 10px 10px; /* note the padding around a right floated image */
+    float: right;
+    padding: 0 0 10px 10px;
+    /* note the padding around a right floated image */
 }
 
 .alignleft {
-  float: left;
-  padding: 0 10px 10px 0; /* note the padding around a left floated image */
+    float: left;
+    padding: 0 10px 10px 0;
+    /* note the padding around a left floated image */
 }
+
 
 /******************************************
 /* BASE STYLES
 /*******************************************/
 
 body {
-  color: #f0efef;
-  font-size: 26px;
-  line-height: 1.4;
-  color: #606161;
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-  font-weight: 300;
+    color: #f0efef;
+    font-size: 16px;
+    line-height: 1.4;
+    color: #606161;
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-weight: 300;
 }
+
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 
@@ -62,162 +74,196 @@ a {
 /* LAYOUT
 /*******************************************/
 
+
 /* Center the container */
+
 .container {
-  width: 960px;
-  margin: 0 auto;
+    max-width: 960px;
+    margin: 0 auto;
 }
+
 .logo {
-  font-size: 48px;
-  font-weight: 800;
+    font-size: 3em;
+    font-weight: 800;
 }
 
 header {
-  background: #033048;
-  padding: 25px 0;
-  overflow: hidden;
+    background: #033048;
+    padding: 25px 0;
+    overflow: hidden;
 }
+
 header .logo {
-  color: #fff;
-  float: left;
+    color: #fff;
+    float: left;
 }
 
 header nav {
-  float: right;
-  margin-top: 15px;
+    float: right;
+    margin-top: 15px;
 }
+
 header nav ul li {
-  display: inline-block;
-  margin: 0 0 0 40px;
-  font-size: 24px;
+    display: inline-block;
+    margin: 0 0 0 40px;
+    font-size: 24px;
 }
+
 header nav ul li a {
-  color: #f9e42e;
+    color: #f9e42e;
+}
+
+.hamburger {
+    display: none;
 }
 
 #hero {
-  height: 700px;
-  background: url(../images/header_bg.jpg) no-repeat top center #131e27;
-  padding-top: 32px;
+    height: 700px;
+    background: url(../images/header_bg.jpg) no-repeat top center #131e27;
+    padding-top: 32px;
+    background-size: cover;
 }
 
 #hero .logo {
-  color: #fff;
+    color: #fff;
 }
+
 #hero h2 {
-  font-size: 48px;
-  text-align: center;
-  color: #fff;
-  margin: 120px 0 90px;
-  font-weight: 600;
+    font-size: 3rem;
+    text-align: center;
+    color: #fff;
+    margin: 120px 0 90px;
+    font-weight: 600;
 }
+
 .button {
-  border-radius: 5px;
-  font-weight: 800;
-  padding: 12px 0;
-  width: 280px;
-  font-size: 28px;
-  text-align: center;
-  display: block;
-  margin: 0 auto;
+    border-radius: 5px;
+    font-weight: 800;
+    padding: 12px 0;
+    width: 280px;
+    font-size: 28px;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
 }
+
 .yellow {
-  background: #f9e42e;
-  color: #033048;
+    background: #f9e42e;
+    color: #033048;
 }
+
 .blue {
-  background: #033048;
-  color: #fff;
-  font-size: 24px;
+    background: #033048;
+    color: #fff;
+    font-size: 24px;
 }
+
 #benefits {
-  padding: 100px 0 80px;
+    padding: 100px 0 80px;
 }
+
 h3 {
-  color: #033048;
-  font-size: 40px;
-  font-weight: 600;
-  margin-bottom: 40px;
+    color: #033048;
+    font-size: 2.5em;
+    font-weight: 600;
+    margin-bottom: 40px;
 }
-#benefits p, #benefits ul {
-  width: 600px;
-}
+
+#benefits p,
 #benefits ul {
-  list-style: disc;
-  margin: 30px 0 0 80px;
+    width: 600px;
 }
+
+#benefits ul {
+    list-style: disc;
+    margin: 30px 0 0 80px;
+}
+
 #testimonial {
-  background: url(../images/testimonial_bg.jpg) no-repeat top center #071324;
-  padding: 70px 0 70px;
-  color: #fff;
+    background: url(../images/testimonial_bg.jpg) no-repeat top center #071324;
+    padding: 70px 0 70px;
+    color: #fff;
 }
+
 blockquote {
-  font-size: 36px;
-  font-weight: 300;
-  font-style: italic;
-  text-align: center;
-  width: 580px;
-  margin: 0 auto;
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    text-align: center;
+    width: 580px;
+    margin: 0 auto;
 }
+
 blockquote span {
-  font-weight: 600;
-  display: block;
-  font-style: normal;
+    font-weight: 600;
+    display: block;
+    font-style: normal;
 }
+
 #main {
-  margin-top: 80px;
+    margin-top: 80px;
 }
+
 #posts {
-  width: 700px;
-  display: inline-block;
-  margin-right: 20px;
-  vertical-align: top;
+    width: 700px;
+    display: inline-block;
+    margin-right: 20px;
+    vertical-align: top;
 }
+
 #sidebar {
-  width: 240px;
-  display: inline-block;
-  vertical-align: top;
+    width: 240px;
+    display: inline-block;
+    vertical-align: top;
 }
+
 .post {
-  border-bottom: 1px solid #043049;
-  padding-bottom: 40px;
-  margin-bottom: 40px;
+    border-bottom: 1px solid #043049;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
 }
+
 .post h2 {
-  font-weight: 600;
-  font-size: 40px;
-  line-height: 1.3;
-  margin-bottom: 30px;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 1.3;
+    margin-bottom: 30px;
 }
+
 .post h2 a {
-  color: #043049;
+    color: #043049;
 }
 
 .post img {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
+
 .post p {
-  font-size: 24px;
-  line-height: 1.333;
-  color: #606161;
+    font-size: 24px;
+    line-height: 1.333;
+    color: #606161;
 }
+
 .post p:first-of-type:first-letter {
-  float: left;
-  font-size: 80px;
-  line-height: 65px;
-  padding-top: 4px;
-  padding-right: 8px;
-  padding-left: 3px;
-  font-weight: 600;
+    float: left;
+    font-size: 80px;
+    line-height: 65px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+    font-weight: 600;
 }
+
 .readmore {
-  text-align: right;
-  margin-top: 30px;
+    text-align: right;
+    margin-top: 30px;
 }
+
 .readmore a {
-  color: #043049;
-  font-weight: 600;
+    color: #043049;
+    font-weight: 600;
 }
+
 
 /*.button {
   border-radius: 5px;
@@ -240,53 +286,410 @@ blockquote span {
 }*/
 
 #sidebar h3 {
-  font-size: 32px;
-  font-weight: 800;
-  margin-bottom: 15px;
-  color: #043049;
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 15px;
+    color: #043049;
 }
+
 #sidebar ul {
-  margin-bottom: 40px;
+    margin-bottom: 40px;
 }
+
 #sidebar ul li a {
-  color: #043049;
-  font-size: 24px;
+    color: #043049;
+    font-size: 24px;
 }
+
 #sidebar p {
-  font-size: 22px;
-  line-height: 1.1;
-  margin-bottom: 40px;
+    font-size: 22px;
+    line-height: 1.1;
+    margin-bottom: 40px;
 }
+
 #sidebar p a {
-  color: #043049;
-  font-weight: 600;
+    color: #043049;
+    font-weight: 600;
 }
 
 #bottom-cta {
-  background: #f9e42e;
-  padding: 30px;
-  text-align: center;
+    background: #f9e42e;
+    padding: 30px;
+    text-align: center;
 }
 
 footer {
-  background: #121212;
-  padding: 65px 0 45px;
-  text-align: center;
+    background: #121212;
+    padding: 65px 0 45px;
+    text-align: center;
 }
+
 footer .logo {
-  color: #f9e42e;
-  margin-bottom: 68px;
+    color: #f9e42e;
+    margin-bottom: 68px;
 }
+
 footer ul li {
-  display: inline-block;
-  list-style: none;
-  margin: 0 26px 75px;
+    display: inline-block;
+    list-style: none;
+    margin: 0 26px 75px;
 }
+
 footer p {
-  font-size: 18px;
-  color: #fff;
-  font-weight: 600;
+    font-size: 18px;
+    color: #fff;
+    font-weight: 600;
 }
 
 
+/******************************************
+/* TABLET STYLES style changes when the screen gets smaller than 768px – covers from 481-768px
+/*******************************************/
 
+@media screen and (max-width:768px) {
+    body {
+        font-size: 16px;
+    }
+    header .logo {
+        float: none;
+        text-align: center;
+    }
+    .logo {
+        font-size: 1.5em;
+    }
+    header nav {
+        float: none;
+    }
+    header nav ul li {
+        font-size: 1.2rem;
+        margin: 10px 0;
+        width: 24%;
+        text-align: center;
+    }
+    #hero {
+        height: 300px;
+        padding: 1.5em;
+        background-size: cover;
+    }
+    #hero h2 {
+        font-size: 2rem;
+        margin: 1.5em 0 5%;
+    }
+    #benefits {
+        padding: 1em 5% 1.5em 5%;
+    }
+    #benefits p,
+    #benefits ul {
+        width: 100%;
+    }
+    #benefits ul {
+        max-width: 100%;
+    }
+    #benefits ul {
+        margin: 0.5em 0 0em 5%;
+    }
+    h3 {
+        font-size: 1.2em;
+        margin-bottom: 0.2em;
+    }
+    #benefits ul li {
+        font-size: 1rem;
+    }
+    #benefits p {
+        font-size: 1rem;
+    }
+    #testimonial {
+        padding: 1.5em 0 1.5em;
+        color: #fff;
+    }
+    blockquote {
+        font-size: 1.2rem;
+        width: 70%;
+        margin: 0 auto;
+    }
+    .button {
+        width: 200px;
+        font-size: 1.2rem;
+    }
+    footer {
+        padding: 1em 1.2em;
+    }
+    footer ul li {
+        margin: 1em;
+    }
+    footer ul li img {
+        height: 1em;
+    }
+    footer .logo {
+        margin-bottom: 0em;
+    }
+    footer p {
+        font-size: 0.7em;
+    }
+
+
+
+ #posts {
+    width: 100%;
+} 
+
+
+
+.post {
+    border-bottom: 1px solid #043049;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+}
+
+.post h2 {
+    font-weight: 600;
+    font-size: 2.5rem;
+    margin: 0 5% 3% 5%;
+}
+
+.post img {
+    margin-bottom: 5%;
+        width:100%;
+
+}
+
+.post p {
+    font-size: 1.1rem;
+    line-height: 1.333;
+    margin: 0 5% 0 5%;
+}
+
+.post p:first-of-type:first-letter {
+    float: left;
+    font-size: 5rem;
+    line-height: 3.8rem;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 0px;
+    font-weight: 600;
+}
+
+
+#sidebar {
+    width: 90%;
+    height: 90%;
+    position: relative;
+    display: inline-block;
+    margin: 0 5% 0 5%;
+}
+
+
+#sidebar h3 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+#sidebar ul {
+    margin-bottom: 5%;
+    
+}
+
+#sidebar ul li a {
+    font-size: 1.1rem;
+}
+
+#sidebar p {
+    width:40%;
+    font-size: 1.1rem;
+    line-height: 1.333;
+    margin-bottom: 20px;
+    
+}
+
+#sidebar p a {
+    color: #043049;
+    font-weight: 600;
+}
+
+img[alt="Ad Unit"] {
+    height: 100%;
+    width:auto;
+    position:absolute;
+    top:0;
+    right:0;
+    float:none;
+    clear:both;
+
+}
+
+    
+}
+/******************************************
+/* MOBILE STYLES style changes when the screen gets smaller than 480px - covers from 0-480px
+/*******************************************/
+
+@media screen and (max-width:480px) {
+    #testimonial {
+        background: url(../images/testimonial_bg.jpg) no-repeat top center #071324;
+        padding: 5%;
+        color: #fff;
+    }
+    
+    header {
+        padding-top: 0%;
+        
+    }
+    header nav {
+        float: none;
+                overflow: hidden;
+
+}
+
+   header nav ul {
+                display: none;
+        background-color:#022037;
+
+    }
+    
+    header nav ul li {
+        margin: 0;
+        width: 100%;
+        text-align: left;
+        padding: 10px 5% 10px 5%;
+        border-bottom: 1px solid gray;
+    }
+    
+    header nav ul li:last-child {
+        border-bottom: none;
+    }
+    
+    header nav ul li a {
+        color: white;
+    }
+    header nav ul li a:hover {
+        color: #f9e42e;
+    }
+    .hamburger {
+        display: inline-block;
+        width:100%;
+        color: #f9e42e;
+        text-align: center;
+    }
+    header .logo {
+        margin: 5% 0 0 0;
+        clear:both;
+    }
+    header ul li {
+        font-size: 1em;
+        clear: both;
+    }
+    
+    #hero h2 {
+        font-size: 1.8rem;
+        margin: 7%;
+    }
+    h3 {
+        font-size: 1.2em;
+        margin-bottom: 0.5em;
+    }
+    #benefits p,
+    #benefits ul {
+        width: 100%;
+        margin-bottom: 0;
+    }
+    #benefits {
+        padding: 1em 5% 1em 5%;
+    }
+    #benefits ul {
+        margin: 0.7em 0 0.6em 5%;
+    }
+    #hero {
+        padding: 1em 1em 3em 1em;
+        height: 250px;
+    }
+    .logo {
+        font-size: 1.5em;
+    }
+    .button {
+        width: 50%;
+        font-size: 1.1rem;
+        margin: 0 auto;
+    }
+    .blue {
+        font-size: 1.1rem;
+    }
+    blockquote {
+        font-size: 1em;
+        font-weight: 300;
+        font-style: italic;
+        text-align: center;
+        width: 100%;
+        padding: 5%;
+        margin: 0 auto;
+    }
+    blockquote span {
+        font-weight: 600;
+        display: block;
+        font-style: normal;
+    }
+    footer {
+        padding: 1em 1.2em;
+    }
+    footer ul li {
+        margin: 1em;
+    }
+    footer ul li img {
+        height: 1em;
+    }
+    footer .logo {
+        margin-bottom: 0em;
+    }
+    footer p {
+        font-size: 0.7em;
+    }
+    
+    
+/* BLOG POSTS */
+    
+ .post {
+    border-bottom: 1px solid #043049;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.post h2 {
+    font-weight: 600;
+    font-size: 1.8rem;
+    margin: 0 5% 3% 5%;
+}
+
+
+.post p {
+    font-size: 1rem;
+    line-height: 1.333;
+    margin: 0 5% 0 5%;
+}
+
+.post p:first-of-type:first-letter {
+    float: left;
+    font-size: 4.5rem;
+    line-height: 3.2rem;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 0px;
+    font-weight: 600;
+} 
+    
+#sidebar p {
+    width:40%;
+    font-size: 1rem;
+    line-height: 1.333;
+    margin-bottom: 20px;
+    
+}    
+  
+#sidebar ul li a {
+    font-size: 1rem;
+}    
+    
+    
+}
+    
+    
+    
+    
